--- a/pom.xml
+++ b/pom.xml
@@ -8,12 +8,22 @@
       <id>clojars.org</id>
       <url>http://clojars.org/repo</url>
     </repository>
+    <repository>
+      <id>spy</id>
+      <name>Spy Repository</name>
+      <layout>default</layout>
+      <url>http://files.couchbase.com/maven2/</url>
+      <snapshots>
+        <enabled>false</enabled>
+      </snapshots>
+    </repository>
+      
   </repositories>
   <dependencies>
     <dependency>
       <groupId>storm</groupId>
       <artifactId>storm</artifactId>
-      <version>0.8.0</version>
+      <version>0.8.1-wip4</version>
     </dependency>
     <dependency>
       <groupId>com.rabbitmq</groupId>
@@ -29,7 +39,18 @@
 		<groupId>nz.ac.waikato.cms.moa</groupId>
 		<artifactId>moa</artifactId>
 		<version>2012.03</version>
-	</dependency>    
+	</dependency>
+	<dependency>
+        <groupId>spy</groupId>
+        <artifactId>spymemcached</artifactId>
+        <version>2.8.1</version>
+        <scope>provided</scope>
+    </dependency>
+    <dependency>
+        <groupId>com.thimbleware.jmemcached</groupId>
+        <artifactId>jmemcached-core</artifactId>
+        <version>1.0.0</version>
+    </dependency>
   </dependencies>
   <build>
     <plugins>
