--- a/test/ml_storm_cluster.properties
+++ b/test/ml_storm_cluster.properties
@@ -2,22 +2,29 @@
 #
 
 #moa classifier settings.
-moa.classifier=moa.classifiers.bayes.NaiveBayes
+moa.classifier=moa.classifiers.meta.OzaBag -s 110 -l trees.HoeffdingTree
 
 #Storm cluster settings
 storm.home=/home/bsp/storm-0.8.2-wip8
 storm.jar=topology.jar
 storm.topology_name=topology
 storm.drpc_host=localhost
-storm.drpc_port=3333
+storm.drpc_port=3772
 # Message broker settings
 ampq.host=localhost
 ampq.port=5672
 ampq.username=guest
+# production == guest
 ampq.password=test
+
 ampq.vhost=/
 ampq.exchange=moa
+ampq.prediction_exchange=moa-predict
+ampq.prediction_results_exchange=prediction-results
 # output queue of the topology [ classification result] [ instance]
+ampq.prediction_results_queue=prediction-results
+
+# input queue for prediction
 ampq.prediction_queue=prediction_queue
 # input queue for the learning
 ampq.learning_queue=learning_queue
