--- a/src/storm_cluster.properties
+++ b/src/storm_cluster.properties
@@ -2,25 +2,40 @@
 #
 
 #moa classifier settings.
-moa.classifier=moa.classifiers.bayes.NaiveBayes
+moa.classifier=moa.classifiers.meta.OzaBag -s 110 -l trees.HoeffdingTree
+#parallelism hint
+learning.parallelism=8
 
 #Storm cluster settings
 storm.home=/home/bsp/storm-0.8.2-wip8
 storm.jar=topology.jar
 storm.topology_name=topology
 storm.drpc_host=localhost
-storm.drpc_port=3333
+storm.drpc_port=3772
+
+#classifier settings
+
+
 # Message broker settings
 ampq.host=localhost
 ampq.port=5672
 ampq.username=guest
+# production == guest
 ampq.password=test
+
 ampq.vhost=/
 ampq.exchange=moa
+ampq.prediction_exchange=moa_predict
+ampq.prediction_results_exchange=moa_results
 # output queue of the topology [ classification result] [ instance]
+ampq.prediction_results_queue=results_queue
+
+# input queue for prediction
 ampq.prediction_queue=prediction_queue
 # input queue for the learning
 ampq.learning_queue=learning_queue
 
+
+
 # Memcached configuration
-memcached.1=localhost:10001
+memcached.1=ml64-10:10001
