--- a/test/ml_storm_cluster.properties
+++ b/test/ml_storm_cluster.properties
@@ -4,12 +4,13 @@
 #moa classifier settings.
 moa.classifier=moa.classifiers.meta.OzaBag -s 110 -l trees.HoeffdingTree
 #parallelism hint
-learning.parallelism=8
+learning.parallelism=1
+evaluation.parallelism=1
 
 #Storm cluster settings
 storm.home=/home/bsp/storm-0.8.2-wip8
 storm.jar=topology.jar
-storm.topology_name=topology
+storm.topology_name=fff
 storm.drpc_host=localhost
 storm.drpc_port=3772
 
