--- a/test/ml_storm_cluster.properties
+++ b/test/ml_storm_cluster.properties
@@ -10,7 +10,7 @@ evaluation.parallelism=1
 #Storm cluster settings
 storm.home=/home/bsp/storm-0.8.2-wip8
 storm.jar=topology.jar
-storm.topology_name=fff
+storm.topology_name=test
 storm.drpc_host=localhost
 storm.drpc_port=3772
 
