--- a/pom.xml
+++ b/pom.xml
@@ -23,12 +23,11 @@
     <dependency>
       <groupId>storm</groupId>
       <artifactId>storm</artifactId>
-      <version>0.8.2-wip18</version>
+      <version>0.8.2</version>
       <scope>provided</scope>
     </dependency>
   
     <dependency>
-    
       <groupId>com.rabbitmq</groupId>
       <artifactId>amqp-client</artifactId>
       <version>2.6.1</version>
@@ -43,16 +42,13 @@
 		<artifactId>moa</artifactId>
 		<version>2012.03</version>
 	</dependency>
+	
 		<dependency>
-        <groupId>spy</groupId>
-        <artifactId>spymemcached</artifactId>
-        <version>2.8.1</version>
-    </dependency>
-    <dependency>
-        <groupId>com.thimbleware.jmemcached</groupId>
-        <artifactId>jmemcached-core</artifactId>
-        <version>1.0.0</version>
-    </dependency>
+  		<groupId>org.hectorclient</groupId>
+  		<artifactId>hector-core</artifactId>
+  		<version>1.1-2</version>
+  	</dependency>
+	
   </dependencies>
   <build>
     <plugins>
