--- a/pom.xml
+++ b/pom.xml
@@ -48,6 +48,12 @@
   		<artifactId>hector-core</artifactId>
   		<version>1.1-2</version>
   	</dependency>
+  	
+  	<dependency>
+		<groupId>org.apache.hadoop</groupId>
+		<artifactId>hadoop-client</artifactId>
+		<version>1.1.1</version>
+	</dependency>
 	
   </dependencies>
   <build>
