--- a/pom.xml
+++ b/pom.xml
@@ -54,7 +54,12 @@
 		<artifactId>hadoop-client</artifactId>
 		<version>1.1.1</version>
 	</dependency>
-	
+	  	
+  	<dependency>
+		<groupId>com.esotericsoftware.kryo</groupId>
+		<artifactId>kryo</artifactId>
+		<version>2.17</version>
+	</dependency>
   </dependencies>
   <build>
     <plugins>
